--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -115,3 +115,4 @@ en:
     approach: approach
     legal_representant_full_name: legal representant full name
     user_name: user name
+    invalidate: invalidate
