--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -123,3 +123,4 @@ es:
     approach: aproximación
     legal_representant_full_name: nombre y apellidos del representante legal
     user_name: nombre y apellidos
+    invalidate: invalidada
