--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -42,6 +42,7 @@ es:
     admin: "Administrador"
     managed_positions: "Agendas"
     manage_agendas: "Asignación de Agendas"
+    lobby: "Lobby"
 
     holders: "Titulares"
     holder: "Titular"
