--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -40,6 +40,7 @@ es:
       order_by: "Orden"
       scheduled: "Fecha"
       score: "Relevancia"
+      sort_by: "Ordernar por"
   show:
     participants: "Asisten"
     location: "Lugar"
