issue 35 option to change the order of  organizations

--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -42,6 +42,7 @@ es:
       score: "Relevancia"
       sort_by: "Ordernar por"
       filter_by: "Filtrar por"
+      descending: "Orden descendente"
   show:
     participants: "Asisten"
     location: "Lugar"
