changed select prompt text

--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -41,6 +41,7 @@ es:
       scheduled: "Fecha"
       score: "Relevancia"
       sort_by: "Ordernar por"
+      filter_by: "Filtrar por"
   show:
     participants: "Asisten"
     location: "Lugar"
