--- a/config/locales/public.en.yml
+++ b/config/locales/public.en.yml
@@ -17,5 +17,5 @@ en:
       order_by: "Orden"
       sheduled: "Fecha"
       score: "Relevancia"
-      sort_by: "Ordernar por"
-      filter_by: "Filtrar por"
+      sort_by: "Sort by"
+      filter_by: "Filter by"
