Added placeholder input organization. Remove reject_if: :all_blank

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -88,6 +88,7 @@ es:
     meeting_lobby_activity_yes: "si"
     meeting_lobby_activity_no: "no"
     meeting_lobby_activity_organization: "Organización"
+    meeting_lobby_activity_input: "Buscar una organización o persona fīsica por nombre o dni"
     meeting_lobby_category: "Categoria: "
     meeting_lobby_activity_represented_entities: "Empresas Representadas"
     meeting_lobby_activity_agents: "Agentes"
