--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -53,7 +53,7 @@ es:
 
 
   backend:
-
+    new_organization_title: "Nueva organización" 
     reference:
       title_fieldset: "Referencia de la declaracíon responsable"
       title: "Referencia"
