--- a/config/locales/activerecord.es.yml
+++ b/config/locales/activerecord.es.yml
@@ -52,4 +52,11 @@ es:
         identifier: "Agente: Identificador"
         name: "Agente: Nombre"
         from: "Agente: Fecha de inicio"
-
+      event/attendees:
+        name: "Asistente: Nombre"
+        position: "Asistente: Cargo"
+        company: "Asistente: Organización"
+      event/attachments:
+        title: "Archivo adjunto: Título"
+        file: "Archivo adjunto: Archivo"
+        public: "Archivo adjunto: Privacidad"
