Add callback to set invalidate field. Last version cant render organization show because invalidate field are not initizalized. Fix translate.

--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -93,7 +93,7 @@ en:
     contact_person:
       title_fieldset: "Persona fisica de contacto"
       name: "Nombre"
-      second_surname: "Apellido"
+      surnames: "Apellidos"
       phone: "Teléfono"
       email: "Email"
       password: "Contraseña"
