--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -94,7 +94,7 @@ es:
     contact_person:
       title_fieldset: "Persona fisica de contacto"
       name: "Nombre"
-      second_surname: "Apellido"
+      surnames: "Apellidos"
       phone: "Teléfono"
       email: "Email"
       password: "Contraseña"
