--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -52,7 +52,7 @@ en:
       interests_title: "Area de interés"
 
   backend:
-    new_organization_title: "Nueva organización" 
+    new_organization_title: "Nueva organización"
     reference:
       title_fieldset: "Referencia de la declaracíon responsable"
       title: "Referencia"
@@ -78,13 +78,13 @@ en:
       town: "Municipio"
       province: "Provincia"
       description: "Descripción"
-      registered_lobbies_title: "Lobbies registrados"
+      registered_lobbies_title: "¿Esta inscrito en algún otro registro?"
       registered_lobbies:
-        no_record: "Seleciona algo"
+        no_record: "Ninguno"
         generalitat_catalunya: "Generalidad catalunya"
         cnmc: "CNMC"
         europe_union: "Europe union"
-        others: "Altro"
+        others: "Otro"
 
     legal_representant:
       add_legal_representative: "Añadir legal representant"
