--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -51,6 +51,14 @@ es:
 
       interests_title: "Area de interés"
 
+    new:
+      title: Alta en el registro de lobbies
+
+    edit:
+      title: Modificación en el registro de lobbies
+
+    delete:
+      title: Baja en el registro de lobbies
 
   backend:
     new_organization_title: "Nueva organización"
