Added translation pending.

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -79,6 +79,7 @@ es:
         person: "Ó por titular/asistente"
         placeholder_person: "Búsqueda por titulares y asistentes"
         button: "Buscar"
+    pending: "Pending"
     date: "Fecha"
     lobby_date: "Descripción de fecha propuesta"
     general_remarks: "Observaciones generales"
