--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -100,6 +100,9 @@ es:
     participants_uniqueness: "Existen titulares de agenda duplicados"
     position_not_in_participants: "El titular de agenda se ha incluido también como asistente"
     attachments: "Archivos adjuntos"
+    attachments_description: "Descripción de archivos adjuntos"
+    attachments_public: "Archivos adjuntos públicos"
+    attachments_private: "Archivos adjuntos privados"
     only_pdf: "Solo PDF"
     name: "Nombre"
     file: "Archivo"
