Add new functions and views for organizations users to edit their own organization

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -113,6 +113,9 @@ es:
     description: "Descripción"
     new_event: "Nuevo evento"
     edit_event: "Editar evento"
+    add_agents: "Añadir agentes"
+    add_interests: "Añadir intereses"
+    show_company: "Ver datos organización"
 
     activity: "Registro de Actividad"
     entries: "Registros"
