Added more input. Name, surname, email, phone.

--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -83,6 +83,15 @@ es:
     attachment_button: "Subir imagen"
     attachment_info: "Puedes subir imágenes .jpg, .png y.bmp, o un archivo .zip o .rar, con un máximo de 3 megas."
     description_title: "Descripción"
+    contact_option_title: "Si lo desea puede añadir los datos de contacto:"
+    name: "Nombre"
+    name_placeholder: "Añade tu nombre"
+    first_surname: "Apellido"
+    first_surname_placeholder: "Añade tu apellido"
+    email: "Email"
+    email_placeholder: "Añade tu email"
+    phone: "Teléfono"
+    phone_placeholder: "Añade tu teléfono"
     send: "Enviar"
     sent: "Email enviado correctamente"
     error: "El fichero %{error}"
