--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -7,7 +7,7 @@ es:
 
     show:
       title: "Página pública de la Organización"
-      reference: "Referencia"
+      reference: "Número de anotación en registro"
       identifying_data_title: "Datos"
       id: "Código de Lobby"
       identifier: "NIF"
