Translate range and true value.

--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -1,4 +1,7 @@
 en:
+  "true": "Yes"
+  "false": "No"
+
   organizations:
     title: Organizations registry
     description: Consult the organizations registered.
