--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -14,6 +14,7 @@ es:
       identifying_data_title: "Datos"
       inscription_date: "Fecha de inscripción"
       updated_at: "Fecha de última modificación"
+      canceled_at: "Fecha de baja"
       id: "Código de Lobby"
       identifier: "NIF"
       name: "Nombre/Apellidos o Razón Social"
