Added state active, canceled. Change some text.

--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -65,7 +65,7 @@ es:
     new_organization_title: "Nueva organización"
     reference:
       title_fieldset: "Referencia de la declaracíon responsable"
-      title: "Referencia"
+      title: "Número de anotación en registro"
 
     identifying_data:
       title_fieldset: "Datos identificativos"
