--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -70,10 +70,13 @@ es:
     must_have_position: "Es necesario añadir al menos un cargo"
 
     events: "Eventos"
-    event: "Evento"
     event_history_updates: "Última actualización"
     event_update_user: "Usuario"
     event_update_date: "Fecha"
+    event:
+      title: 'Event'
+      event_agent_needed: "There should be at least one agent on lobby events"
+      not_available_agents: "Not available agents."
     search:
         title: "Búsqueda por título"
         placeholder_title: "Búsqueda por título"
