--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -85,7 +85,7 @@ es:
         button: "Buscar"
         status: "Search by status"
         tool_tips_multiple_selection: "Para seleccionar más estados debes mantener apretado SHIFT en una PC o COMMAND en una Mac"
-        multiple_selection: "¿Selección múltipla?"
+        multiple_selection: "¿Selección múltiple?"
     pending: "Pending"
     date: "Fecha"
     lobby_date: "Descripción de fecha propuesta"
