--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -87,7 +87,7 @@ es:
         button: "Buscar"
         status: "Búsqueda por estado"
         tool_tips_multiple_selection: "Para seleccionar más estados debes mantener apretado SHIFT en una PC o COMMAND en una Mac"
-        multiple_selection: "¿Selección múltipla?"
+        multiple_selection: "¿Selección múltiple?"
     pending: "Pendiente"
     date: "Fecha"
     lobby_date: "Descripción de fecha propuesta"
