Added submenu and header title only for home page.

--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -6,8 +6,8 @@ es:
     page_language: "Idioma de la página"
     spanish: "Español"
     english: "Inglés"
-    open_goverment: "Gobierno abierto"
-    transparency: "Transparencia"
+    open_goverment: "Transparencia"
+    transparency: "Toma de decisiones"
     participation: "Decide Madrid"
     open_data: "Datos abiertos"
     transparency_url: "http://www.madrid.es/portaldetransparencia "
