Changed the search form, from dropdown to text field. Updated the test to work accoringly.

--- a/config/locales/public.en.yml
+++ b/config/locales/public.en.yml
@@ -20,3 +20,4 @@ en:
       sort_by: "Sort by"
       filter_by: "Filter by"
       descending: "Descending order"
+      agent: "Agent's name or surname"
