--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -44,6 +44,7 @@ es:
       sort_by: "Ordernar por"
       filter_by: "Filtrar por"
       descending: "Orden descendente"
+      agent: "Nombre o apellido del agente"
   show:
     participants: "Asisten"
     location: "Lugar"
