--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -16,6 +16,16 @@ es:
     btn_public_agenda: "Agendas públicas"
     btn_organizations: "Consulta de registro"
     btn_login: "Entrar"
+    btn_home: "Inicio"
+    btn_agenda: "Agenda"
+    btn_registration_lobbies: "Registro de lobbies"
+    btn_regulations: "Huella normativa"
+    title_home: "Transparencia en la Toma de decisiones"
+    lead_home: "El Ayuntamiento de Madrid abre sus decisiones a la Ciudadanía, consúltalas."
+    title_registration_lobbies_html: "¿Por qué un registro de lobbies del<br /> Ayuntamiento de Madrid?"
+    lead_registration_lobbies_html: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br />sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod."
+    title_visitors_html: "¿ Que son las agendas públicas ?"
+    lead_visitors_html: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br />sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod."
   main:
     title: "Agendas públicas"
     any_errors: "¿Hay algún error en esta página?"
