--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -76,15 +76,6 @@ es:
     message:
       default: "Secret Code did not match with the Image"
       user: "The secret Image and code were different"
-  footer:
-    description: Este portal usa la %{consul} que es %{open_source}. De Madrid, para el mundo entero.
-    open_data_text: Todos los datos del Ayuntamiento son tuyos.
-    participation_text: Decide cómo debe ser la ciudad de Madrid que quieres.
-    transparency_text: Obtén cualquier información sobre el Ayuntamiento de Madrid.
-    consul: aplicación Consul
-    consul_url: https://github.com/consul/consul
-    open_source: software libre
-    open_source_url: http://www.gnu.org/licenses/agpl-3.0.html
   infringement_mailbox:
     title: "Buzón de incumplimientos"
     description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper id justo non aliquet. Sed semper faucibus mi, vitae rutrum nulla euismod eu. Donec et dignissim ligula. Aenean quis efficitur ex. Sed quis purus dui. Aliquam sed dui purus. Phasellus auctor augue scelerisque ligula ullamcorper, vitae convallis purus varius. Integer in tempor eros, eu posuere nisl. Nulla et urna posuere, porttitor diam eu, tincidunt felis. Fusce finibus lobortis nibh. Vestibulum a nunc egestas, luctus nisl vel, imperdiet dui. Integer et leo vitae eros tincidunt venenatis. Cras tristique tempus justo non varius. Integer mollis placerat diam in luctus."
@@ -110,3 +101,23 @@ es:
     send: "Enviar"
     sent: "Email enviado correctamente"
     error: "El fichero %{error}"
+  footer:
+    title_first_block: "Portal de Toma de decisiones"
+    description_first_block: "Espacio para el impulso de la transparencia en la gestión municipal, el acceso a la información y la trazabilidad de las decisiones públicas."
+    btn_cover_page: "Portada"
+    btn_organization: "Organización"
+    btn_human_resources: "Recursos humanos"
+    btn_legal_information: "Información jurídica"
+    btn_economy_budgets: "Economía y presupuestos"
+    btn_relationship_citizens: "Relación con la ciudadanía"
+    btn_environmen_urbanism: "Medio ambiente y urbanismo"
+    btn_access_information: "Acceso a la información"
+
+    title_third_block: "Otras webs del Ayuntamiento de Madrid"
+    footer_more_info:
+      first_block: "Ayuntamiento de Madrid 2017"
+    btn_accessibility: "Accesibilidad"
+    btn_contact: "Contactar"
+    btn_web_map: "Mapa  web"
+    btn_legal_warning: "Aviso legal"
+    btn_privacy_policy: "Politítica de privacidad"
