--- a/config/locales/public.en.yml
+++ b/config/locales/public.en.yml
@@ -24,3 +24,5 @@ en:
       inscription_date_asc: "Inscription date ASC"
       inscription_date_desc: "Inscription date DESC"
       agent: "Agent's name or surname"
+      filter_by_interests: "Filtrar por intereses"
+      filter_by_category: "Filtrar por categorias"
