--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -58,6 +58,8 @@ es:
       inscription_date_asc: "Fecha de inscripción ascendente"
       inscription_date_desc: "Fecha de inscripción descendente"
       agent: "Nombre o apellido del agente"
+      filter_by_interests: "Filtrar por intereses"
+      filter_by_category: "Filtrar por categorias"
   show:
     participants: "Asisten"
     location: "Lugar"
