Translate login and recover password.

--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -2,6 +2,13 @@
 
 es:
   devise:
+    sign_in: "Entrar"
+    email: "Email"
+    password: "Contraseña"
+    forgot_password: "¿ Contraseña olvidada ?"
+    remember: "Recordar en este ordenador"
+    password_reset_instructions: "Le enviaremos instrucciones de restablecimiento de contraseña"
+    reset_password: "Restablecer la contraseña"
     confirmations:
       confirmed: "Tu cuenta ha sido confirmada."
       send_instructions: "Recibirás un correo electrónico en unos minutos con instrucciones sobre cómo restablecer tu contraseña."
