--- a/config/locales/mailers.en.yml
+++ b/config/locales/mailers.en.yml
@@ -7,3 +7,10 @@ en:
       text2: "Has been cancelled for the following reason:"
       canceled_at: "On %{canceled_at}"
       thanks: "Regards"
+    decline_event:
+      subject: "Declined event: %{title}"
+      welcome: "Hello %{name}"
+      text1: "The event: %{title}"
+      text2: "Has been declined by %{name}, for the following reason:"
+      declined_at: "On %{declined_at}"
+      thanks: "Regards"
