add owned events to organizations show

--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -55,6 +55,8 @@ en:
 
       interests_title: "Area de interés"
 
+      events_title: "Events"
+
     new:
       title: Registration in lobbies
 
