--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -62,7 +62,9 @@ es:
       agents_to: "Fecha de fin de representación"
 
       interests_title: "Area de interés"
-      
+
+      events_title: "Eventos"
+
     new:
       title: Alta en el registro de lobbies
 
@@ -71,7 +73,7 @@ es:
 
     delete:
       title: Baja en el registro de lobbies
-      
+
   backend:
     new_organization_title: "Nueva organización"
     reference:
